--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="password" maxlength="1" />
       </form>
       <div id="code-block" class="special hidden">
-        Wait your special code is <span id="code"></span>?
+        Your code is: <span id="code"></span>
         <br />
         <i onclick="reset()">Reset </i>
       </div>
