--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <div>
+  <body class="tranCode body">
+    <div class="tranCode">
       <form>
         <input type="password" maxlength="1" />
         <input type="password" maxlength="1" />
@@ -15,9 +15,9 @@
         <input type="password" maxlength="1" />
       </form>
       <div id="code-block" class="special hidden">
-        Your code is: <span id="code"></span>
+        Your transaction code is: <span id="code"></span>
         <br />
-        <i onclick="reset()">Reset </i>
+        <i style="cursor: pointer" onclick="reset()">Reset </i>
       </div>
     </div>
     <!-- custom javascript -->
